test/tests/errors/error-procedure-incorrect-param3.sm
// true
// false
/**/
/**/

program {
    proc x(a, b, c) {
        output "t";
    }

    x(1, 2, 3, 4);
}